--- a/.github/workflows/helm.yaml
+++ b/.github/workflows/helm.yaml
@@ -16,6 +16,12 @@ jobs:
 
       - name: Helm lint
         run: helm lint .
+      - name: Trivy container scan
+        uses: aquasecurity/trivy-action@v1
+        with:
+          image-ref: nginx:1.24.0
+          format: table
+          exit-code: 1  
 
       - name: Render templates
         run: helm template .
