--- a/.github/workflows/helm.yaml
+++ b/.github/workflows/helm.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Trivy container scan
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: nginx:1.24.0
+          image-ref: nginx:1.24.0-alpine
           format: table
           exit-code: 1  
 
