--- a/.github/workflows/helm.yaml
+++ b/.github/workflows/helm.yaml
@@ -19,11 +19,10 @@ jobs:
       - name: Trivy container scan
         uses: aquasecurity/trivy-action@master
         with:
-          scan-type: 'fs' # 'fs' for filesystem scan of the repository
-          ignore-unfixed: false
-          format: 'sarif' # SARIF format for GitHub Advanced Security integration
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
+          image-ref: nginx:1.19.0 #nginx:1.24.0-alpine
+          format: table
+          exit-code: 1  
+          ignore-unfixed: true
 
       - name: Render templates
         run: helm template .
