--- a/.github/workflows/helm.yaml
+++ b/.github/workflows/helm.yaml
@@ -19,10 +19,11 @@ jobs:
       - name: Trivy container scan
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: nginx:1.24.0-alpine #nginx:1.19.0
+          image-ref: nginx:mainline-alpine #nginx:1.19.0
           format: table
           exit-code: 1  
           ignore-unfixed: true
+          severity: HIGH,CRITICAL
 
       - name: Render templates
         run: helm template .
