--- a/values.yaml
+++ b/values.yaml
@@ -2,13 +2,13 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 4
+replicaCount: 8
 
 image:
   repository: nginx
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "1.19.0"  #"1.19.0"  image with vulnerabilities for testing "1.21.6" - good image
+  tag: "mainline-alpine"  #"1.19.0"  image with vulnerabilities for testing "1.21.6" - good image
 
 imagePullSecrets: []
 nameOverride: ""
